--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,16 +10,7 @@
         </div>
         <div fxFlex.xl="30" fxFlex.lg="30" fxFlex.md="30" fxFlex.sm="100" fxFlex.xs="100">
           <!-- Will create a fake comment section -->
-          <div class="w-100">
-            <label>Comments:</label>
-            <mat-form-field appearance="outline" floatLabel="never" class="w-100">
-              <textarea matInput matTextareaAutosize required matAutoSize required type="text" [matAutosizeMinRows]="5"
-                [matAutosizeMaxRows]="5" aria-label="Comment Section"></textarea>
-            </mat-form-field>
-            <div fxLayoutAlign="end start">
-              <button mat-flat-button color="primary" aria-label="Add comment">Add Comment</button>
-            </div>
-          </div>
+            <app-comments></app-comments>
         </div>
       </div>
     </div>
