created service fees component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,7 @@
     <div fxLayoutAlign="start start">
       <div class="w-100" fxLayout="row wrap">
         <div fxFlex.xl="70" fxFlex.lg="70" fxFlex.md="70" fxFlex.sm="100" fxFlex.xs="100">
-          <app-table></app-table>
-          <button mat-flat-button color="warn">Generate Invoice</button>
+          <app-service-fees></app-service-fees>
         </div>
         <div fxFlex.xl="30" fxFlex.lg="30" fxFlex.md="30" fxFlex.sm="100" fxFlex.xs="100">
           <!-- Will create a fake comment section -->
