--- a/src/app/components/shared/table/table.component.html
+++ b/src/app/components/shared/table/table.component.html
@@ -1,1 +1,38 @@
-<p>table works!</p>
+<div class="w-100">
+    <div class="table-container">
+        <table mat-table [dataSource]="dataSource" matSort>
+            <!-- Checkbox Column -->
+            <ng-container *ngIf="canSelect" matColumnDef="checkbox">
+                <th mat-header-cell *matHeaderCellDef>
+                    <mat-checkbox (change)="$event ? masterToggle() : null"
+                        [checked]="selection.hasValue() && isAllSelected() == true"
+                        [indeterminate]="selection.hasValue() && !isAllSelected()">
+                    </mat-checkbox>
+                </th>
+                <td mat-cell *matCellDef="let row">
+                    <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selectRow($event, row) : null"
+                        (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row) == true">
+                    </mat-checkbox>
+                </td>
+            </ng-container>
+            <!-- Table Columns -->
+            <ng-container [matColumnDef]="header.key" *ngFor="let header of tableHeaders; let i = index">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{header.text}}</th>
+                <td mat-cell *matCellDef="let row">{{header.cell(row)}}</td>
+            </ng-container>
+            <ng-container matColumnDef="actions" *ngIf="actionsLocal">
+                <th mat-header-cell *matHeaderCellDef>Actions</th>
+                <td mat-cell *matCellDef="let element">
+                    <div class="button-row">
+                        <button *ngIf="canEdit" mat-icon-button (click)="edit(element)"
+                            attr.aria-label="{{editButton}}">
+                            <mat-icon class="edit-button" tabindex="-1" matTooltip="{{editTooltip}}"> edit</mat-icon>
+                        </button>
+                    </div>
+                </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+</div>
