--- a/src/app/components/shared/table/table.component.html
+++ b/src/app/components/shared/table/table.component.html
@@ -26,7 +26,7 @@
                     <div class="button-row">
                         <button *ngIf="canEdit" mat-icon-button (click)="edit(element)"
                             attr.aria-label="{{editButton}}">
-                            <mat-icon class="edit-button" tabindex="-1" matTooltip="{{editTooltip}}"> edit</mat-icon>
+                            <mat-icon class="edit-button" tabindex="-1" matTooltip="Edit {{title}}"> edit</mat-icon>
                         </button>
                     </div>
                 </td>
