--- a/src/app/components/shared/table/table.component.scss
+++ b/src/app/components/shared/table/table.component.scss
@@ -4,17 +4,17 @@
       min-width: 500px;
       overflow: scroll;
         .mat-row:nth-child(even){
-          background-color:#ffffff !important;
+          background-color:#ffffff;
           }  
         .mat-row:nth-child(odd){
-          background-color:#f9f9f9 !important;
+          background-color:#f9f9f9;
           }
           td {
             padding: 10px !important;
-              border-right:1px solid rgba(0,0,0,.12) !important;
+              border-right:1px solid rgba(0,0,0,.12);
           }
           .mat-cell:last-of-type, .mat-footer-cell:last-of-type{
-            border-right: none !important;
+            border-right: none;
           }
     }
   }
