--- a/src/app/components/shared/table/table.component.html
+++ b/src/app/components/shared/table/table.component.html
@@ -1,5 +1,8 @@
 <div class="w-100">
-    <div class="table-container">
+    <div *ngIf="!hasResults">
+        <p>No {{title}}s</p>
+    </div>
+    <div class="table-container" *ngIf="hasResults">
         <table mat-table [dataSource]="dataSource" matSort>
             <!-- Checkbox Column -->
             <ng-container *ngIf="canSelect" matColumnDef="checkbox">
@@ -15,11 +18,12 @@
                     </mat-checkbox>
                 </td>
             </ng-container>
-            <!-- Table Columns -->
+            <!-- Data Columns -->
             <ng-container [matColumnDef]="header.key" *ngFor="let header of tableHeaders; let i = index">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>{{header.text}}</th>
                 <td mat-cell *matCellDef="let row">{{header.cell(row)}}</td>
             </ng-container>
+            <!-- Action Columns-->
             <ng-container matColumnDef="actions" *ngIf="actionsLocal">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
