--- a/src/app/components/service-fees/service-fees.component.html
+++ b/src/app/components/service-fees/service-fees.component.html
@@ -1,2 +1,4 @@
-<app-table></app-table>
+<app-table [title]="'fee'" [pageSize]="10" [actions]="true" [canEdit]="true" [canSelect]="true"
+[tableData]="tableData" [tableHeaders] ="tableHeaders"
+(editEvent)="edit($event)" (selectFieldsEvent)="select($event)"></app-table>
 <button mat-flat-button color="warn">Generate Invoice</button>
