added data to table

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,7 @@
-.p-15{
-    padding:15px;
-}
-.w-100{
-    width: 100%;
-}
 .container{
     margin-top: 15px;
 }
+.side-padding{
+    padding:0 10px;
+  }
+  
