--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,13 @@
   <section class="container">
     <div fxLayoutAlign="start start">
       <div class="w-100" fxLayout="row wrap">
-        <div fxFlex.xl="70" fxFlex.lg="70" fxFlex.md="70" fxFlex.sm="100" fxFlex.xs="100">
-          <app-service-fees></app-service-fees>
+        <div class="side-padding" fxFlex.xl="70" fxFlex.lg="70" fxFlex.md="70" fxFlex.sm="100" fxFlex.xs="100">
+            <app-service-fees></app-service-fees>
         </div>
-        <div fxFlex.xl="30" fxFlex.lg="30" fxFlex.md="30" fxFlex.sm="100" fxFlex.xs="100">
+        <div class="side-padding" fxFlex.xl="30" fxFlex.lg="30" fxFlex.md="30" fxFlex.sm="100" fxFlex.xs="100">
           <!-- Will create a fake comment section -->
             <app-comments></app-comments>
+
         </div>
       </div>
     </div>
