--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,12 @@ label {
   mat-form-field{
     width: 100%;
 }
+.p-15{
+  padding:15px;
+}
+.w-100{
+  width: 100%;
+}
+.side-padding{
+  padding:0 10px;
+}
