--- a/src/app/components/shared/table/table.component.scss
+++ b/src/app/components/shared/table/table.component.scss
@@ -10,12 +10,19 @@
         .mat-row:nth-child(odd){
           background-color:#f9f9f9;
           }
-          td {
-            padding: 10px !important;
+          .mat-header-cell{
+            font-size: 1.2em;
+          }
+          td, th {
+            padding: 0 10px;
               border-right:1px solid rgba(0,0,0,.12);
           }
-          .mat-cell:last-of-type, .mat-footer-cell:last-of-type{
+          .mat-cell:last-of-type, .mat-header-cell:last-of-type{
             border-right: none;
+            width: 10px;
+          }
+          .mat-cell:first-of-type, .mat-header-cell:first-of-type{
+            width: 10px;
           }
     }
   }
