--- a/src/app/components/shared/table/table.component.html
+++ b/src/app/components/shared/table/table.component.html
@@ -28,9 +28,9 @@
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
                     <div class="button-row">
-                        <button *ngIf="canEdit" mat-icon-button (click)="edit(element)"
+                        <button *ngIf="canEdit" mat-icon-button class ="edit-button" (click)="edit(element)"
                             attr.aria-label="{{'Edit ' + title + ' button'}}">
-                            <mat-icon class="edit-button" tabindex="-1" matTooltip="{{'Edit ' + title}}"> edit</mat-icon>
+                            <mat-icon class="edit-icon" tabindex="-1" matTooltip="{{'Edit ' + title}}"> edit</mat-icon>
                         </button>
                     </div>
                 </td>
