--- a/src/app/components/shared/dialogs/service-edit/service-edit.component.scss
+++ b/src/app/components/shared/dialogs/service-edit/service-edit.component.scss
@@ -4,3 +4,9 @@
 .p-10{
     padding:10px;
 }
+.custom-prefix{
+    padding-right: 7px;
+    border: 1px solid #e6e6e6; border-width: 1px 1px 1px 0;
+    margin-right: 7px;
+    font-weight: 700;
+}
