--- a/src/app/components/shared/dialogs/service-edit/service-edit.component.scss
+++ b/src/app/components/shared/dialogs/service-edit/service-edit.component.scss
@@ -6,7 +6,10 @@
 }
 .custom-prefix{
     padding-right: 7px;
-    border: 1px solid #e6e6e6; border-width: 1px 1px 1px 0;
+    border: 1px solid #e1e1e1;
+    border-width: 1px 1px 0.95px 0;
     margin-right: 7px;
     font-weight: 700;
+    padding-top: 8.5px;
+    padding-bottom: 12.5px;
 }
