--- a/src/app/components/shared/dialogs/service-edit/service-edit.component.scss
+++ b/src/app/components/shared/dialogs/service-edit/service-edit.component.scss
@@ -6,14 +6,12 @@
 }
 .custom-prefix{
     padding-right: 7px;
-    border-right: 1px solid #e1e1e1;
-    // border-width: 1px 1px 0.95px 0;
+    // border-right: 1px solid #e1e1e1;
+    // // border-width: 1px 1px 0.95px 0;
     margin-right: 7px;
     font-weight: 700;
-    padding-top: 6.5px;
-    padding-bottom: 8.5px;
-    transition: all 0.1s;
-    
+    // padding-top: 6.5px;
+    // padding-bottom: 8.5px;    
 }
 // .mat-form-field-appearance-outline:hover .custom-prefix{
 //     border-color: #000000;
