--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,3 +28,19 @@ label {
 }
 
 mat-icon:focus { outline:0 !important; }
+
+
+.mat-form-field {
+  
+
+    .mat-form-field-subscript-wrapper,
+    .mat-form-field-ripple {
+      position: initial !important;
+      display: table;
+    }
+
+    .mat-form-field-subscript-wrapper {
+      min-height: calc(1em + 1px);
+    }
+  
+}
