--- a/src/app/components/service-fees/service-fees.component.html
+++ b/src/app/components/service-fees/service-fees.component.html
@@ -6,18 +6,37 @@
         [tableData]="tableData" [tableHeaders]="tableHeaders" (editEvent)="edit($event)"
         (selectFieldsEvent)="select($event)"></app-table>
 </div>
-<div class="w-100" fxLayout="row wrap" >
+<div class="w-100" fxLayout="row wrap" [formGroup]="feeForm">
     <div class="side-padding" fxFlex.xl="25" fxFlex.lg="25" fxFlex.md="25" fxFlex.sm="50" fxFlex.xs="100">
-        <!--  -->
+        <mat-form-field appearance="outline" floatLabel="always">
+            <mat-label>Amount Waived:</mat-label>
+            <input matInput type="text" formControlName="waived" aria-label="Amount Waived input field."
+            [value]="form.waived.value | number : '.2-2'" step ="0.01">
+            <mat-icon matPrefix>attach_money</mat-icon>
+        </mat-form-field>
     </div>
     <div class="side-padding" fxFlex.xl="25" fxFlex.lg="25" fxFlex.md="25" fxFlex.sm="50" fxFlex.xs="100">
-        <!--  -->
+        <mat-form-field appearance="outline" floatLabel="always">
+            <mat-label>Deposit Paid:</mat-label>
+            <input matInput type="number" formControlName="depositPaid" aria-label="Deposit Paid input field."
+                [matAutocomplete]="depositPaidAuto" [value]="form.depositPaid.value | number : '.2-2'" step ="0.01">
+            <mat-autocomplete #depositPaidAuto="matAutocomplete">
+                <mat-option *ngFor="let deposit of depositOptions" [value]="deposit * form.total.value">
+                    {{deposit * 100 + '%'}}
+                </mat-option>
+            </mat-autocomplete>
+            <mat-icon matPrefix>attach_money</mat-icon>
+        </mat-form-field>
     </div>
     <div class="side-padding" fxFlex.xl="25" fxFlex.lg="25" fxFlex.md="25" fxFlex.sm="50" fxFlex.xs="100">
-        <!--  -->
+        <mat-form-field appearance="outline" floatLabel="always">
+            <mat-label>Deposit Due:</mat-label>
+            <input matInput type="text" formControlName="depositDue" aria-label="Deposit Due input field."
+            [value]="(form.total.value*0.5) | number : '.2-2'" placeholder="0.00">
+            <mat-icon matPrefix>attach_money</mat-icon>
+        </mat-form-field>
     </div>
     <div class="side-padding" fxFlex.xl="25" fxFlex.lg="25" fxFlex.md="25" fxFlex.sm="50" fxFlex.xs="100">
-        <!--  -->
         <mat-form-field appearance="outline" floatLabel="always">
             <mat-label>Total:</mat-label>
             <input matInput type="text" formControlName="total" aria-label="Total input field.">
