--- a/src/app/components/service-fees/service-fees.component.html
+++ b/src/app/components/service-fees/service-fees.component.html
@@ -10,7 +10,7 @@
     <div class="side-padding" fxFlex.xl="25" fxFlex.lg="25" fxFlex.md="25" fxFlex.sm="50" fxFlex.xs="100">
         <mat-form-field appearance="outline" floatLabel="always">
             <mat-label>Amount Waived:</mat-label>
-            <input matInput type="text" formControlName="waived" aria-label="Amount Waived input field."
+            <input matInput type="number" formControlName="waived" aria-label="Amount Waived input field."
             [value]="form.waived.value | number : '.2-2'" step ="0.01">
             <mat-icon matPrefix>attach_money</mat-icon>
         </mat-form-field>
