--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -1,8 +1,10 @@
-    <label>Comments:</label>
-    <mat-form-field appearance="outline" floatLabel="never">
-        <textarea matInput matTextareaAutosize required matAutoSize type="text" [matAutosizeMinRows]="5"
-            [matAutosizeMaxRows]="5" aria-label="Comment Section"></textarea>
-    </mat-form-field>
-    <div fxLayoutAlign="end start">
-        <button mat-flat-button color="primary" aria-label="Add comment">Add Comment</button>
-    </div>
+<app-table [title]="'comment'" [pageSize]="10" [tableData]="comments"
+    [tableHeaders]="tableHeaders" [isHeaderHidden]="true"></app-table>
+<label>Comments:</label>
+<mat-form-field appearance="outline" floatLabel="never">
+    <textarea matInput matTextareaAutosize required matAutoSize type="text" [matAutosizeMinRows]="3"
+        [matAutosizeMaxRows]="3" aria-label="Comment Section"></textarea>
+</mat-form-field>
+<div fxLayoutAlign="end start">
+    <button mat-flat-button color="primary" aria-label="Add comment">Add Comment</button>
+</div>
