--- a/src/app/components/shared/table/table.component.html
+++ b/src/app/components/shared/table/table.component.html
@@ -21,7 +21,8 @@
             <!-- Data Columns -->
             <ng-container [matColumnDef]="header.key" *ngFor="let header of tableHeaders; let i = index">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header [hidden]="isHeaderHidden">{{header.text}}</th>
-                <td mat-cell *matCellDef="let row">{{header.cell(row)}}</td>
+                <td [ngStyle]="header.style" mat-cell *matCellDef="let row" [innerHtml]="header.cell(row)">
+                    </td>
             </ng-container>
             <!-- Action Columns-->
             <ng-container matColumnDef="actions" *ngIf="actionsLocal">
