--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,8 +31,6 @@ mat-icon:focus { outline:0 !important; }
 
 
 .mat-form-field {
-  
-
     .mat-form-field-subscript-wrapper,
     .mat-form-field-ripple {
       position: initial !important;
@@ -42,5 +40,9 @@ mat-icon:focus { outline:0 !important; }
     .mat-form-field-subscript-wrapper {
       min-height: calc(1em + 1px);
     }
-  
+}
+
+.comment-info{
+    font-style: italic;
+    font-weight: 200;
 }
