--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -1,10 +1,17 @@
-<app-table [title]="'comment'" [pageSize]="10" [tableData]="comments"
-    [tableHeaders]="tableHeaders" [isHeaderHidden]="true"></app-table>
-<label>Comments:</label>
-<mat-form-field appearance="outline" floatLabel="never">
-    <textarea matInput matTextareaAutosize required matAutoSize type="text" [matAutosizeMinRows]="3"
-        [matAutosizeMaxRows]="3" aria-label="Comment Section"></textarea>
-</mat-form-field>
+<app-table [title]="'comment'" [pageSize]="10" [tableData]="comments" [tableClass]="'comment-table'" [tableHeaders]="tableHeaders"
+    [isHeaderHidden]="true"></app-table>
+<form [formGroup]="commentForm">
+    <label>Comments:</label>
+    <mat-form-field appearance="outline" floatLabel="never">
+        <textarea matInput matTextareaAutosize required matAutoSize type="text" [matAutosizeMinRows]="3"
+            [matAutosizeMaxRows]="3" aria-label="Comment Section" formControlName="comment"  maxlength="255"></textarea>
+            <div fxLayoutAlign="end center">
+            <mat-hint >
+                    {{commentForm.get('comment').value?.length}} /255
+                </mat-hint>
+            </div>
+    </mat-form-field>
+</form>
 <div fxLayoutAlign="end start">
     <button mat-flat-button color="primary" aria-label="Add comment">Add Comment</button>
 </div>
