--- a/src/app/components/shared/table/table.component.scss
+++ b/src/app/components/shared/table/table.component.scss
@@ -1,3 +1,5 @@
+// Service Fee Table
+.service-fee-table {
 .table-container {
     overflow: auto;
     table {
@@ -27,7 +29,12 @@
           }
     }
   }
-
+}
+.comment-table{
+  td, th {
+    padding: 0 5px !important;
+    }
+}
 // Edit button
 .edit-button {
   background-color: #ffffff;
