--- a/src/app/components/shared/table/table.component.scss
+++ b/src/app/components/shared/table/table.component.scss
@@ -34,6 +34,13 @@
   td, th {
     padding: 0 5px !important;
     }
+    tr.mat-footer-row {
+      height: 10px !important;
+      overflow: auto;
+  }
+  .mat-column-Comment {
+    vertical-align: top;
+  }
 }
 // Edit button
 .edit-button {
